// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render coverage 1`] = `
<div
  className="project-card-measure"
  data-key="coverage"
>
  <div
    className="project-card-measure-inner"
  >
    <div
      className="project-card-measure-number"
    >
      <Measure
        measure={
          Object {
            "value": undefined,
          }
        }
        metric={
          Object {
            "key": "coverage",
            "type": "PERCENT",
          }
        }
      />
    </div>
    <div
      className="project-card-measure-label"
    >
      metric.coverage.name
    </div>
  </div>
</div>
`;

exports[`should not render duplications 1`] = `
<div
  className="project-card-measure"
  data-key="duplicated_lines_density"
>
  <div
    className="project-card-measure-inner"
  >
    <div
      className="project-card-measure-number"
    >
      <Measure
        measure={
          Object {
            "value": undefined,
          }
        }
        metric={
          Object {
            "key": "duplicated_lines_density",
            "type": "PERCENT",
          }
        }
      />
    </div>
    <div
      className="project-card-measure-label"
    >
      metric.duplicated_lines_density.short_name
    </div>
  </div>
</div>
`;

exports[`should render correctly with all data 1`] = `
<div
  className="project-card-measures"
>
  <div
    className="project-card-measure smaller-card"
    data-key="reliability_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Rating
          muted={false}
          small={false}
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric_domain.Reliability
      </div>
    </div>
  </div>
  <div
    className="project-card-measure smaller-card"
    data-key="security_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Rating
          muted={false}
          small={false}
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric_domain.Security
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="sqale_rating"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <Rating
          muted={false}
          small={false}
          value="1.0"
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric_domain.Maintainability
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="coverage"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <span
          className="spacer-right"
        >
          <CoverageRating
            muted={false}
            size="normal"
            value="88.3"
          />
        </span>
        <Measure
          measure={
            Object {
              "value": "88.3",
            }
          }
          metric={
            Object {
              "key": "coverage",
              "type": "PERCENT",
            }
          }
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.coverage.name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure"
    data-key="duplicated_lines_density"
  >
    <div
      className="project-card-measure-inner"
    >
      <div
        className="project-card-measure-number"
      >
        <span
          className="spacer-right"
        >
          <DuplicationsRating
            muted={false}
            small={false}
            value={9.8}
          />
        </span>
        <Measure
          measure={
            Object {
              "value": "9.8",
            }
          }
          metric={
            Object {
              "key": "duplicated_lines_density",
              "type": "PERCENT",
            }
          }
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        metric.duplicated_lines_density.short_name
      </div>
    </div>
  </div>
  <div
    className="project-card-measure pull-right"
    data-key="ncloc"
  >
    <div
      className="project-card-measure-inner pull-right"
    >
      <div
        className="project-card-measure-number"
      >
        <span
          className="spacer-right"
        >
          <SizeRating
            muted={false}
            small={false}
            value={2053}
          />
        </span>
        <Measure
          measure={
            Object {
              "value": "2053",
            }
          }
          metric={
            Object {
              "key": "ncloc",
              "type": "SHORT_INT",
            }
          }
        />
      </div>
      <div
        className="project-card-measure-label"
      >
        <Connect(ProjectCardLanguages) />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render ncloc correctly 1`] = `
<div
  className="project-card-measure pull-right"
  data-key="ncloc"
>
  <div
    className="project-card-measure-inner pull-right"
  >
    <div
      className="project-card-measure-number"
    >
      <span
        className="spacer-right"
      >
        <SizeRating
          muted={false}
          small={false}
          value={16549887}
        />
      </span>
      <Measure
        measure={
          Object {
            "value": "16549887",
          }
        }
        metric={
          Object {
            "key": "ncloc",
            "type": "SHORT_INT",
          }
        }
      />
    </div>
    <div
      className="project-card-measure-label"
    >
      <Connect(ProjectCardLanguages) />
    </div>
  </div>
</div>
`;
